# word-frequency

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  db.py  main.py  pyproject.toml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  codebase_structure.md  design_patterns_guidelines.md  project_overview.md  suggested_commands.md  task_completion_checklist.md  tech_stack.md
data/: sample_ebook_word_freq.csv
src/word-frequency/: text_chunker.py
src/word_frequency/: __init__.py  __main__.py  cli.py  db.py  nlp.py  pipeline.py  text_chunker.py  tokens.py
src/wordfreq/: __init__.py  __main__.py  cli.py  nlp.py  pipeline.py  tokens.py
tests/: __init__.py  test_db.py  test_nlp.py  test_pipeline.py  test_text_chunker.py  test_tokens.py
