[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wordfreq"
version = "0.1.0"
description = "Word frequency analyzer"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fire>=0.7.1",
    "loguru>=0.7.3",
    "spacy>=3.8.7",
    "tqdm>=0.0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/wordfreq"]

[dependency-groups]
dev = [
    "ruff>=0.12.11",
]
