[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "word-frequency"
version = "0.1.0-2"
description = "Word frequency analyzer"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fire>=0.7.1",
    "loguru>=0.7.3",
    "spacy>=3.8.7",
    "tqdm>=0.0.1",
]

[project.scripts]
word-frequency = "word_frequency.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/word_frequency"]

[dependency-groups]
dev = [
    "ruff>=0.12.11",
]
