[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "word-frequency"
version = "0.1.0-2"
description = "Word frequency analyzer"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fire",
    "loguru",
    "spacy",
    "tqdm",
    "en-core-web-trf @ https://github.com/explosion/spacy-models/releases/download/en_core_web_trf-3.8.0/en_core_web_trf-3.8.0-py3-none-any.whl"
]

[project.scripts]
word-frequency = "word_frequency.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/word_frequency"]

[tool.hatch.metadata]
allow-direct-references = true

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-asyncio",
    # "pytest-timeout",
    "pre-commit"
]
release = [
    "build",
    "twine"
]

[tool.ruff]
line-length = 140
target-version = "py313"
exclude = []


[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = ["E501"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["word_frequency"]

[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = ["--import-mode=importlib", "--ignore=examples"]


[tool.mypy]
files = ["src", "tests"]
strict = true
disallow_any_generics = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
ignore_missing_imports = true
